--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.3",
     "postcss-pxtorem": "^5.0.0",
     "vant": "^2.12.48",
     "vue": "^2.6.11",
