--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.3",
+    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "postcss-pxtorem": "^5.0.0",
     "vant": "^2.12.48",
     "vue": "^2.6.11",
