--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "cropperjs": "^1.5.12",
     "dayjs": "^1.11.3",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
