--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vant": "^2.12.48",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
